--- a/index.html
+++ b/index.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Smart Tech Solutions</title>
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Smart Tech Solutions</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
+<!-- HEADER -->
 <header class="header">
-  <div class="logo-container">
-    <img src="logo.jpg" alt="Logo">
-    <h2>Smart Tech Solutions</h2>
+  <div class="brand">
+    <img src="logo.jpg" alt="Smart Tech Solutions">
+    <span class="company-name">Smart Tech Solutions</span>
   </div>
-
   <div class="menu-icon" onclick="toggleMenu()">☰</div>
 </header>
 
+<!-- MENÚ -->
 <nav id="menu" class="menu">
   <span class="close-btn" onclick="toggleMenu()">✕</span>
-  <a href="#">Productos</a>
-  <a href="#">Contacto</a>
-  <a href="#">Talento</a>
+  <a href="productos.html">Productos</a>
+  <a href="contacto.html">Contacto</a>
+  <a href="talento.html">Talento</a>
 </nav>
 
+<!-- HERO -->
 <section class="hero">
   <div class="overlay">
     <h1>Innovación que transforma</h1>
@@ -32,40 +33,45 @@
   </div>
 </section>
 
+<!-- HISTORIA -->
 <section class="historia">
   <h2>Nuestra Historia</h2>
   <p>
-    Somos una empresa tecnológica enfocada en desarrollar soluciones digitales
-    innovadoras para empresas que buscan crecer y transformarse digitalmente.
+    Smart Tech Solutions nace con el propósito de transformar empresas a través
+    de la tecnología. Desde nuestros inicios desarrollamos soluciones digitales
+    innovadoras que impulsan el crecimiento empresarial.
   </p>
 </section>
 
+<!-- MISIÓN -->
 <section class="section-flex">
   <div class="image">
-    <img src="mision.jpg" alt="Misión">
+    <img src="misión.PNG" alt="Misión Smart Tech">
   </div>
   <div class="text">
     <h2>Misión</h2>
     <p>
       Crear tecnología eficiente, moderna y escalable que impulse el crecimiento
-      de nuestros clientes.
+      y la transformación digital de nuestros clientes.
     </p>
   </div>
 </section>
 
+<!-- VISIÓN -->
 <section class="section-flex reverse">
+  <div class="image">
+    <img src="visión.png" alt="Visión Smart Tech">
+  </div>
   <div class="text">
     <h2>Visión</h2>
     <p>
       Ser una empresa líder en innovación tecnológica reconocida
-      a nivel internacional.
+      a nivel internacional por su calidad, impacto y excelencia.
     </p>
-  </div>
-  <div class="image">
-    <img src="vision.jpg" alt="Visión">
   </div>
 </section>
 
+<!-- CRECIMIENTO -->
 <section class="crecimiento">
   <h2>Nuestro Crecimiento</h2>
   <div class="stats-container">
@@ -88,11 +94,6 @@
   </div>
 </section>
 
-<script>
-function toggleMenu() {
-  document.getElementById("menu").classList.toggle("active");
-}
-</script>
-
+<script src="script.js"></script>
 </body>
 </html>
