--- a/Contacto.html
+++ b/Contacto.html
@@ -42,7 +42,7 @@
   <!-- WHATSAPP -->
   <div class="whatsapp">
     <a href="https://wa.me/50300000000" target="_blank">
-      📱 Escríbenos por WhatsApp
+      Escríbenos por WhatsApp
     </a>
   </div>
 
