--- a/Contacto.html
+++ b/Contacto.html
@@ -41,7 +41,7 @@
 
   <!-- WHATSAPP -->
   <div class="whatsapp">
-    <a href="https://wa.me/503 72888240" target="_blank">
+    <a href="https://wa.me/50372888240" target="_blank">
       Escríbenos por WhatsApp
     </a>
   </div>
@@ -70,4 +70,5 @@ function toggleMenu() {
 
 </body>
 </html>
+
 
