--- a/Contacto.html
+++ b/Contacto.html
@@ -42,8 +42,8 @@
   <!-- WHATSAPP -->
   <div class="whatsapp">
     <a href="https://wa.me/50372888240" target="_blank">
-      Escríbenos por WhatsApp
-    </a>
+  📱 Escríbenos por WhatsApp
+</a>
   </div>
 
   <!-- CORREO DIRECTO -->
@@ -70,5 +70,6 @@ function toggleMenu() {
 
 </body>
 </html>
+
 
 
