--- a/Contacto.html
+++ b/Contacto.html
@@ -42,13 +42,13 @@
   <!-- WHATSAPP -->
   <div class="whatsapp">
     <a href="https://wa.me/50372888240" target="_blank">
-  📱 Escríbenos por WhatsApp
+  Escríbenos por WhatsApp
 </a>
   </div>
 
   <!-- CORREO DIRECTO -->
   <div class="email-direct">
-    📧 contacto@smarttechsolutions.com
+    contacto@smarttechsolutions.com
   </div>
 
   <!-- FORMULARIO -->
@@ -70,6 +70,7 @@ function toggleMenu() {
 
 </body>
 </html>
+
 
 
 
